--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "expo-secure-store": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
