--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.3.0",
-    "expo-secure-store": "~8.1.0"
+    "expo-secure-store": "~8.1.0",
+    "expo-permissions": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
