--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "redux-persist": "^5.9.1",
     "redux-thunk": "^2.3.0",
     "expo-secure-store": "~8.1.0",
-    "expo-permissions": "~8.1.0"
+    "expo-permissions": "~8.1.0",
+    "expo-mail-composer": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
+    "@react-native-community/netinfo": "5.5.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
