--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@react-navigation/drawer": "^5.4.1",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "exp": "^57.2.1",
     "expo": "~37.0.3",
+    "expo-calendar": "~8.1.0",
+    "expo-image-manipulator": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "expo-mail-composer": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -38,8 +42,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.3.0",
-    "expo-image-manipulator": "~8.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
